--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.props')" />
+  <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -225,12 +225,8 @@
     <ClInclude Include="Engine\D3D\D3D12Buffer.hpp" />
     <ClInclude Include="Dependencies\EnTT\entt.hpp" />
     <ClInclude Include="Engine\ECS\Entity.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12DepthBuffer.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12RootSignature.hpp" />
     <ClInclude Include="Engine\D3D\D3D12PipelineState.hpp" />
-    <ClInclude Include="Engine\D3D\D3D12Descriptor.hpp" />
     <ClInclude Include="Engine\ECS\Component.hpp" />
-    <ClInclude Include="Engine\Engine\Engine.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\Buffer.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\BufferUtility.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\ConstantBuffer.hpp" />
@@ -241,7 +237,6 @@
     <ClInclude Include="Engine\D3D\D3D12RootSignature.hpp" />
     <ClInclude Include="Engine\D3D\D3D12GraphicsPipelineState.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Descriptor.hpp" />
-    <ClInclude Include="Engine\ECS\Component.hpp" />
     <ClInclude Include="Engine\Engine\Engine.hpp" />
     <ClInclude Include="Engine\Render\Camera.hpp" />
     <ClInclude Include="Dependencies\D3D12MA\D3D12MemAlloc.h" />
@@ -268,7 +263,6 @@
     <ClInclude Include="Engine\Render\Model\Mesh.hpp" />
     <ClInclude Include="Engine\Render\Model\Meshlet.hpp" />
     <ClInclude Include="Engine\Render\Model\Model.hpp" />
-    <ClInclude Include="Engine\Render\RenderPass\GBufferPass.hpp" />
     <ClInclude Include="Engine\Render\RenderPass\LightPass.hpp" />
     <ClInclude Include="Engine\Utility\FileSystem.hpp" />
     <ClInclude Include="Engine\Utility\MemoryUsage.hpp" />
@@ -287,7 +281,6 @@
     <ClInclude Include="Engine\Scene\Scene.hpp" />
     <ClInclude Include="Engine\Core\Logger.hpp" />
     <ClInclude Include="Engine\Render\Lights\PointLight.hpp" />
-    <ClInclude Include="Engine\Render\RenderPass\LightPass.hpp" />
     <ClInclude Include="Engine\Utility\Math.hpp" />
     <ClInclude Include="Engine\Core\Platform.hpp" />
   </ItemGroup>
@@ -384,6 +377,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" />
+    <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -391,5 +385,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props'))" />
     <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets'))" />
   </Target>
 </Project>
