pre-rework update

--- a/LowerDeck Engine/imgui.ini
+++ b/LowerDeck Engine/imgui.ini
@@ -15,9 +15,9 @@ Collapsed=1
 
 [Window][Scene]
 Pos=0,22
-Size=878,597
+Size=878,557
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000017,0
 
 [Window][Properties]
 Pos=880,22
@@ -40,7 +40,7 @@ Collapsed=0
 Pos=0,22
 Size=1516,838
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000017,1
 
 [Window][Log]
 Pos=0,621
@@ -58,7 +58,7 @@ DockId=0x00000003,1
 Pos=0,22
 Size=796,581
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000017,1
 
 [Window][Non-given]
 Pos=880,621
@@ -108,10 +108,18 @@ Size=400,138
 Collapsed=0
 DockId=0x00000016,0
 
+[Window][Logs]
+Pos=0,581
+Size=878,219
+Collapsed=0
+DockId=0x00000018,0
+
 [Docking][Data]
 DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
   DockNode                    ID=0x00000003 Parent=0x8B93E3BD SizeRef=878,778 Split=Y
-    DockNode                  ID=0x0000000F Parent=0x00000003 SizeRef=1019,854 CentralNode=1 HiddenTabBar=1 Selected=0xE192E354
+    DockNode                  ID=0x0000000F Parent=0x00000003 SizeRef=1019,854 Split=Y Selected=0xE192E354
+      DockNode                ID=0x00000017 Parent=0x0000000F SizeRef=878,814 CentralNode=1 HiddenTabBar=1 Selected=0xE192E354
+      DockNode                ID=0x00000018 Parent=0x0000000F SizeRef=878,219 Selected=0x65EF497E
     DockNode                  ID=0x00000010 Parent=0x00000003 SizeRef=1019,179 Selected=0x64F50EE5
   DockNode                    ID=0x00000004 Parent=0x8B93E3BD SizeRef=400,778 Split=Y Selected=0x199AB496
     DockNode                  ID=0x00000005 Parent=0x00000004 SizeRef=259,32 Selected=0x199AB496
