--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props')" />
+  <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -151,6 +151,27 @@
     <ClCompile Include="Dependencies\D3D12MA\D3D12MemAlloc.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Core\Logger.hpp" />
+    <ClInclude Include="Core\Platform.hpp" />
+    <ClInclude Include="D3D\D3D12Adapter.hpp" />
+    <ClInclude Include="D3D\D3D12Buffer.hpp" />
+    <ClInclude Include="D3D\D3D12Command.hpp" />
+    <ClInclude Include="D3D\D3D12Context.hpp" />
+    <ClInclude Include="D3D\D3D12DepthBuffer.hpp" />
+    <ClInclude Include="D3D\D3D12Descriptor.hpp" />
+    <ClInclude Include="D3D\D3D12DescriptorHeap.hpp" />
+    <ClInclude Include="D3D\D3D12Device.hpp" />
+    <ClInclude Include="D3D\D3D12Memory.hpp" />
+    <ClInclude Include="D3D\D3D12PipelineState.hpp" />
+    <ClInclude Include="D3D\D3D12RootSignature.hpp" />
+    <ClInclude Include="D3D\D3D12SwapChain.hpp" />
+    <ClInclude Include="D3D\D3D12Texture.hpp" />
+    <ClInclude Include="D3D\D3D12Types.hpp" />
+    <ClInclude Include="D3D\D3D12Utility.hpp" />
+    <ClInclude Include="D3D\D3D12Viewport.hpp" />
+    <ClInclude Include="ECS\Component.hpp" />
+    <ClInclude Include="ECS\Entity.hpp" />
+    <ClInclude Include="ECS\World.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Memory.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Adapter.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Texture.hpp" />
@@ -213,6 +234,19 @@
     <ClInclude Include="Dependencies\ImGui\imgui.h" />
     <ClInclude Include="Engine\Render\RenderPass\GBufferPass.hpp" />
     <ClInclude Include="Engine\Scene\GameObject.hpp" />
+    <ClInclude Include="Graphics\Buffer\Buffer.hpp" />
+    <ClInclude Include="Graphics\Buffer\BufferUtility.hpp" />
+    <ClInclude Include="Graphics\Buffer\ConstantBuffer.hpp" />
+    <ClInclude Include="Graphics\Buffer\ConstantTypes.hpp" />
+    <ClInclude Include="Graphics\Buffer\Vertex.hpp" />
+    <ClInclude Include="Graphics\ImageBasedLighting.hpp" />
+    <ClInclude Include="Graphics\MipMapGenerator.hpp" />
+    <ClInclude Include="Graphics\Shader.hpp" />
+    <ClInclude Include="Graphics\Shader5.hpp" />
+    <ClInclude Include="Graphics\ShaderManager.hpp" />
+    <ClInclude Include="Graphics\Texture.hpp" />
+    <ClInclude Include="Graphics\TextureManager.hpp" />
+    <ClInclude Include="Graphics\TextureUtility.hpp" />
     <ClInclude Include="Input\CameraInput.hpp" />
     <ClInclude Include="Engine\Engine\Renderer.hpp" />
     <ClInclude Include="Engine\ECS\World.hpp" />
@@ -223,6 +257,26 @@
     <ClInclude Include="Engine\Render\RenderPass\LightPass.hpp" />
     <ClInclude Include="Engine\Utility\Math.hpp" />
     <ClInclude Include="Engine\Core\Platform.hpp" />
+    <ClInclude Include="Render\Camera.hpp" />
+    <ClInclude Include="Render\Lights.hpp" />
+    <ClInclude Include="Render\Lights\PointLight.hpp" />
+    <ClInclude Include="Render\Lights\PointLights.hpp" />
+    <ClInclude Include="Render\Model\Importer.hpp" />
+    <ClInclude Include="Render\Model\Mesh.hpp" />
+    <ClInclude Include="Render\Model\Meshlet.hpp" />
+    <ClInclude Include="Render\Model\Model.hpp" />
+    <ClInclude Include="Render\Renderer.hpp" />
+    <ClInclude Include="Render\RenderPass\GBufferPass.hpp" />
+    <ClInclude Include="Render\RenderPass\LightPass.hpp" />
+    <ClInclude Include="Render\ScreenOutput.hpp" />
+    <ClInclude Include="Scene\GameObject.hpp" />
+    <ClInclude Include="Scene\Scene.hpp" />
+    <ClInclude Include="Utility\FileSystem.hpp" />
+    <ClInclude Include="Utility\Math.hpp" />
+    <ClInclude Include="Utility\MemoryUsage.hpp" />
+    <ClInclude Include="Utility\Singleton.hpp" />
+    <ClInclude Include="Utility\TimeUtility.hpp" />
+    <ClInclude Include="Utility\Utility.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -316,13 +370,13 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.targets')" />
+    <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.props'))" />
-    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.0\build\native\Microsoft.Direct3D.D3D12.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.2\build\native\Microsoft.Direct3D.D3D12.targets'))" />
   </Target>
 </Project>
