--- a/LowerDeck/LowerDeck.vcxproj.filters
+++ b/LowerDeck/LowerDeck.vcxproj.filters
@@ -38,5 +38,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Shaders\RootSignatures.hlsli" />
+    <None Include="Shaders\Common.hlsli" />
+    <None Include="Shaders\Sky\SkyCommon.hlsli" />
+    <None Include="Shaders\Deferred\DeferredCommon.hlsli" />
+    <None Include="Shaders\Deferred\GBuffer.hlsli" />
+    <None Include="Shaders\Deferred\DeferredLighting.hlsli" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\MipMaps_CS.hlsl" />
+    <FxCompile Include="Shaders\Forward.hlsl" />
+    <FxCompile Include="Shaders\Sky\EquirectangularToCube_CS.hlsl" />
+    <FxCompile Include="Shaders\Sky\IrradianceMap_CS.hlsl" />
+    <FxCompile Include="Shaders\Sky\Skybox.hlsl" />
+    <FxCompile Include="Shaders\Sky\SpBRDF_LUT_CS.hlsl" />
+    <FxCompile Include="Shaders\Sky\SpecularMap_CS.hlsl" />
+    <FxCompile Include="Shaders\Deferred\Deferred.hlsl" />
+    <FxCompile Include="Shaders\Deferred\GBuffer.hlsl" />
   </ItemGroup>
 </Project>
