--- a/LowerDeck/imgui.ini
+++ b/LowerDeck/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,22
-Size=1280,778
+Size=1920,1035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,27 +9,45 @@ Size=400,400
 Collapsed=0
 
 [Window][Properties]
-Pos=940,22
-Size=340,778
+Pos=1582,623
+Size=338,434
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][Logs]
-Pos=0,594
-Size=938,206
+Pos=0,851
+Size=1580,206
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene]
 Pos=0,22
-Size=938,570
+Size=1580,827
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Hierarchy]
+Pos=1582,22
+Size=338,599
+Collapsed=0
+DockId=0x00000005,0
+
+[Table][0x69972F29,2]
+RefScale=16
+Column 0  Width=90
+Column 1  Width=210
+
+[Table][0x9E87A7E2,2]
+RefScale=16
+Column 0  Width=90
+Column 1  Width=193
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=324,189 Size=1280,778 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=1578,778 Split=Y
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,45 Size=1920,1035 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=940,778 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1006,570 CentralNode=1 Selected=0xE192E354
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1006,206 Selected=0x65EF497E
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=340,778 Selected=0x199AB496
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=338,778 Split=Y Selected=0x29EABFBD
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=328,450 Selected=0x29EABFBD
+    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=328,326 Selected=0x199AB496
 
